--- a/config/snap.conf
+++ b/config/snap.conf
@@ -7,11 +7,11 @@
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following lines to enable the RGB underglow
-# CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
-# CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=5
-# CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=5
+CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
