--- a/config/snap.conf
+++ b/config/snap.conf
@@ -8,6 +8,7 @@
 
 # Uncomment the following line to enable the OLED Display
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Uncomment the following lines to enable the RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
