--- a/config/snap.conf
+++ b/config/snap.conf
@@ -16,3 +16,4 @@ CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_STEP=5
 CONFIG_ZMK_RGB_UNDERGLOW_SPD_START=1
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
