--- a/config/snap.conf
+++ b/config/snap.conf
@@ -3,8 +3,8 @@
 
 # Uncomment these two lines to add support for encoders to your firmware
 # and enable the encoders
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the OLED Display
 CONFIG_ZMK_DISPLAY=y
