--- a/build.yaml
+++ b/build.yaml
@@ -17,3 +17,5 @@ include:
     shield: snap_left
   - board: nice_nano_v2
     shield: snap_right
+  - board: nice_nano_v2
+    shield: settings_reset
