--- a/config/snap.conf
+++ b/config/snap.conf
@@ -7,8 +7,7 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
 # Uncomment the following line to enable the OLED Display
-# CONFIG_ZMK_DISPLAY=y
-# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_ZMK_DISPLAY=y
 
 # Uncomment the following lines to enable the RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
