--- a/config/snap.conf
+++ b/config/snap.conf
@@ -6,8 +6,18 @@
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
-# Uncomment the following line to enable the OLED Display
+# Display
 CONFIG_ZMK_DISPLAY=y
+
+# Disable battery widget as my build is ONLY wired
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
+
+# Enable WPM widget
+CONFIG_ZMK_WPM=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+
+# Turn off deep sleep
+CONFIG_ZMK_SLEEP=n
 
 # Uncomment the following lines to enable the RGB underglow
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
