--- a/config/west.yml
+++ b/config/west.yml
@@ -1,12 +1,11 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-    - name: thilojaeggi
       url-base: https://github.com/thilojaeggi
   projects:
     - name: zmk
-      remote: thilojaeggi
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
