--- a/config/west.yml
+++ b/config/west.yml
@@ -1,11 +1,13 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base: https://github.com/thilojaeggi
+      url-base: https://github.com/zmkfirmware
+    - name: sensor-test
+      url-base: https://github.com/nickconway
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: sensor-test
+      revision: configurable-sensor-bindings
       import: app/west.yml
   self:
     path: config
