--- a/config/snap.conf
+++ b/config/snap.conf
@@ -13,7 +13,7 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 
 # Enable WPM widget
-CONFIG_ZMK_WIDGET_BONGO_CAT=y
+#CONFIG_ZMK_WIDGET_BONGO_CAT=y
 
 # Turn off deep sleep
 CONFIG_ZMK_SLEEP=n
