--- a/config/snap.conf
+++ b/config/snap.conf
@@ -14,7 +14,7 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 
 # Enable WPM widget
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
-#CONFIG_ZMK_WIDGET_BONGO_CAT=y
+CONFIG_ZMK_WIDGET_BONGO_CAT=y
 
 
 # Turn off deep sleep
